fix: changed description on main page and fixed table cutting off top

--- a/CSS/Kgk2btTablesS21.css
+++ b/CSS/Kgk2btTablesS21.css
@@ -19,6 +19,10 @@
     float: right;
 }
 
+#tableTitle {
+    margin-top: 1em;
+}
+
 #professionalPic {
     height: 250px;
 }
